test/visibility/only/hidesCorrectType.good
hidesCorrectType.chpl:13: In function 'main':
hidesCorrectType.chpl:14: error: 'foo' undeclared (first use this function)
